// ER Diagram — Bank Deposits App (Variant 16)
// Paste this at: https://dbdiagram.io/d

Table users {
  id            integer   [pk, increment, note: "Primary key"]
  username      text      [not null, unique, note: "Login name"]
  password_hash text      [not null, note: "SHA-256 hex digest"]
  role          text      [not null, default: "USER", note: "Values: ADMIN | USER"]

  note: "Application login accounts (not bank clients)"
}

Table banks {
  id      integer  [pk, increment, note: "Primary key"]
  name    text     [not null, note: "Bank name"]
  rating  real     [note: "Reliability rating 0.0 – 5.0"]

  note: "Banks that offer deposit products"
}

Table deposits {
  id                 integer  [pk, increment, note: "Primary key"]
  bank_id            integer  [not null, ref: > banks.id, note: "FK → banks"]
  name               text     [not null, note: "Product name"]
  type               text     [not null, note: "Values: TERM | SAVINGS | DEMAND"]
  currency           text     [not null, default: "UAH", note: "Currency code"]
  min_amount         real     [not null, note: "Minimum opening amount"]
  interest_rate      real     [not null, note: "Annual interest rate, %"]
  term_months        integer  [note: "Term in months; 0 for demand deposits"]
  can_withdraw_early integer  [not null, default: 0, note: "1 = early withdrawal allowed"]
  can_replenish      integer  [not null, default: 0, note: "1 = top-up allowed"]
  penalty_rate       real     [not null, default: 0, note: "Early-withdrawal penalty, %"]

  note: "Deposit products (TERM / SAVINGS / DEMAND)"
}

Table clients {
  id         integer  [pk, increment, note: "Primary key"]
  first_name text     [not null, note: "First name"]
  last_name  text     [not null, note: "Last name"]
  email      text     [note: "Contact e-mail"]

  note: "Bank clients (separate from app users)"
}

Table client_deposits {
  id         integer  [pk, increment, note: "Primary key"]
  client_id  integer  [not null, ref: > clients.id, note: "FK → clients"]
  deposit_id integer  [not null, ref: > deposits.id, note: "FK → deposits"]
  amount     real     [not null, note: "Deposited amount"]
  opened_at  text     [default: `datetime('now')`, note: "ISO-8601 open datetime"]
  status     text     [not null, default: "ACTIVE", note: "Values: ACTIVE | CLOSED"]

  note: "Links a client to an opened deposit product"
}

// Relationship summary
// banks         1 ---< deposits          (one bank, many deposit products)
// clients       1 ---< client_deposits   (one client, many deposit records)
// deposits      1 ---< client_deposits   (one product, many client records)
// users table is independent — stores app auth, not client data

TableGroup "Domain Model" {
  banks
  deposits
  clients
  client_deposits
}

TableGroup "Authentication" {
  users
}
